<resources>
    <string name="app_name">Rabbit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_new">create new</string>
    <string name="enter_an_email">enter your email</string>
    <string name="enter_your_password">minimum 6 characters</string>
    <string name="sign_in_with">Sign in with :</string>
    <string name="facebook_app_id">546563282456892</string>
    <string name="fb_login_protocol_scheme">fb546563282456892</string>

    <string name="accept">Accept</string>
    <string name="nick_name">nick name</string>
    <string name="sign_in_with_goole">You must be logged in via Google account on this device.</string>
    <string name="enter_your_nick_name">Nickname can not be empty</string>
    <string name="select_profile_foto">CChoose your profile picture</string>
    <string name="cancel">Cancel</string>
    <string name="user_name">user name</string>
    <string name="logout">Logout</string>
    <string name="enter_a_message">type a message</string>
    <string name="search_users">search users</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="reset_password">reset password</string>
    <string name="no_messages">no messages</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="long_message">In this tutorial we will learn how to migrate an existing Android
        Studio project, to use the new AndroidX (Android Extension Libraries) dependencies.</string>
    <string name="change_profile_name">Change profile name</string>
</resources>
