<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    android:orientation="vertical"
    tools:context=".view.authorizationscreen.AuthorizationActivity">

    <LinearLayout
        android:id="@+id/registration_form_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="0"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_bottom_left_corner_90"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray50"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorRed400"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_bottom_left_corner_90"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray50"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorRed400"
            android:textSize="13sp" />

    </LinearLayout>


    <Button
        android:id="@+id/button_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_form_layout"
        android:layout_alignStart="@id/registration_form_layout"
        android:layout_marginTop="30dp"
        android:alpha="0"
        android:background="@drawable/shape_rounded_rectangle_white"
        android:paddingStart="16sp"
        android:paddingTop="8dp"
        android:paddingEnd="16sp"
        android:paddingBottom="8dp"
        android:text="@string/create_new"
        android:textAllCaps="false"
        android:textColor="@color/colorGray50"
        android:textSize="16sp" />


    <Button
        android:id="@+id/button_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_form_layout"
        android:layout_alignEnd="@id/registration_form_layout"
        android:layout_marginTop="30dp"
        android:alpha="0"
        android:background="@drawable/shape_rounded_rectangle_white"
        android:paddingStart="16sp"
        android:paddingTop="8dp"
        android:paddingEnd="16sp"
        android:paddingBottom="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorGray50"
        android:textSize="16sp"/>



    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:alpha="0"
        android:background="@color/colorTransparent"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:text="@string/forgot_your_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />
</RelativeLayout>