<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_avatar_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_action_add"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="1dp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle_bottom_left_corner_90"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGray50"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_alignStart="@id/edit_email"
        android:textColor="@color/colorRed400"
        android:textSize="13sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edit_nick_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_bottom_left_corner_90"
        android:gravity="center"
        android:hint="@string/nick_name"
        android:inputType="textPersonName"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGray50"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_nick_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_nick_name"
        android:layout_alignStart="@id/edit_nick_name"
        android:textColor="@color/colorRed400"
        android:textSize="13sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edit_nick_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_bottom_left_corner_90"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGray50"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_alignStart="@id/edit_password"
        android:textColor="@color/colorRed400"
        android:textSize="13sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_alignEnd="@+id/edit_password"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rounded_rectangle_white"
        android:text="@string/accept"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_alignStart="@+id/edit_password"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rounded_rectangle_white"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
